Clean up ALPN since it's changed in Java 11 deployments